added logout button real quick

--- a/src/app/components/group/group-menu/group-menu.component.html
+++ b/src/app/components/group/group-menu/group-menu.component.html
@@ -4,6 +4,8 @@
     <h1 id="title" class="noselect">Your Groups</h1>
 
     <button (click)="openCreateGroupPage()">Create a group</button>
+
+    <button (click)="logout()">Logout</button>
     
     <div id="group-list">
         <a 
