reworked filter functionality to be correct. caved on a model

--- a/src/app/components/Chat/chat-window/chat-window.component.html
+++ b/src/app/components/Chat/chat-window/chat-window.component.html
@@ -40,7 +40,7 @@
                 type="submit"
                 [disabled]="chatMessageInput.length === 0"
                 [ngClass]="chatMessageInput.length === 0 ? 'inactive-button' : ''"
-                (click)="sendChatMessage()">
+                (click)="filterChatMessage()">
                 Send
             </button>
         </div>
