--- a/src/app/components/group/group-menu/snack-bar-message.html
+++ b/src/app/components/group/group-menu/snack-bar-message.html
@@ -1,5 +1,5 @@
 <span id="message" matSnackBarLabel>
-    Chats created successfully!
+    Group created successfully!
 </span>
 <span matSnackBarActions>
     <button id="button" mat-button matSnackBarAction (click)="snackBarRef.dismissWithAction()">
