--- a/src/app/components/group/group-menu/group-menu.component.css
+++ b/src/app/components/group/group-menu/group-menu.component.css
@@ -1,12 +1,8 @@
-/* * {
-    border: 1px solid red;
-} */
-
 .container {
     width: 100%;
-    height: 100%;
+    height: fit-content;
     margin: 0;
-    padding: 0;
+    padding: 0 5vw;
     box-sizing: border-box;
 }
 
@@ -21,7 +17,7 @@
     display: flex;
     flex-flow: row wrap;
     flex-grow: 0;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     gap: 100px;
     width: 100%;
@@ -31,7 +27,8 @@
 }
 
 .group-card {
-    background-color: rgb(25, 114, 114);
+    background: rgb(21,21,21);
+    background: linear-gradient(180deg, rgba(21,21,21,1) 0%, rgba(66,100,149,1) 100%); 
     color: whitesmoke;
     border: 1px solid rgb(68, 68, 68);
     border-radius: 50%;
@@ -59,4 +56,21 @@
     border: 5px solid rgb(54, 46, 104);
     transition: ease all 0.3s;
     z-index: 1;
+}
+
+#create-group-button {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    background: rgb(21,21,21);
+    background: linear-gradient(180deg, rgba(21,21,21,1) 0%, rgba(54,70,155,1) 49%, rgba(66,100,149,1) 100%);
+    pointer-events: auto;
+    cursor: pointer;
+}
+
+#create-group-icon {
+    font-size: 60px;
+    height: fit-content;
+    width: fit-content;
 }
