--- a/src/app/components/group/group-menu/group-menu.component.html
+++ b/src/app/components/group/group-menu/group-menu.component.html
@@ -1,10 +1,11 @@
 <div class="container">
-
     <h1 id="title" class="noselect">Your Groups</h1>
-
-    <button (click)="openCreateGroupPage()">Create a group</button>
     
     <div id="group-list">
+        <a id="create-group-button" class="group-card" (click)="openCreateGroupPage()">
+            <mat-icon id="create-group-icon">group_add</mat-icon>
+            <span>Create New Group</span>
+        </a>
         <a 
         class="group-card" 
         *ngFor="let group of userGroups"
