--- a/src/app/components/group/group-menu/group-menu.component.html
+++ b/src/app/components/group/group-menu/group-menu.component.html
@@ -1,8 +1,12 @@
 @if(isLoaded){
 <div class="container">
+    
     <h1 id="title" class="noselect">Your Groups</h1>
-
-    <button (click)="logout()">Logout</button>
+    
+    <div id="user-nav">
+        <!-- Username and pfp go here -->
+        <button id="logout-button" (click)="logout()">Logout</button>
+    </div>
     
     <div id="group-list">
         <a id="create-group-button" class="group-card" (click)="openCreateGroupPage()">
