--- a/src/app/components/Chat/chat-page-container/chat-page-container.component.css
+++ b/src/app/components/Chat/chat-page-container/chat-page-container.component.css
@@ -105,7 +105,7 @@ mat-toolbar .mat-primary {
 #chat-name {
   display: block;
   color: var(--primary-text-color);
-  flex-grow: 1;
+  flex-grow: 0;
   max-width: 70%;
   white-space: nowrap;
   overflow: hidden;
@@ -117,7 +117,7 @@ mat-toolbar .mat-primary {
   flex-flow: row nowrap;
   justify-content: flex-end;
   align-items: center;
-  gap: 20px;
+  margin-right: 20px;
 }
 
 #chat-timer {
