--- a/src/app/components/Chat/end-of-chat-user-table/end-of-chat-user-table.component.html
+++ b/src/app/components/Chat/end-of-chat-user-table/end-of-chat-user-table.component.html
@@ -2,7 +2,7 @@
     <h3 id="table-header">{{tableHeader}}</h3>
     <table>
         <tr 
-        *ngFor="let name of names"
+        *ngFor="let name of names; let i = index"
         [matTooltip]="name === '' ? 'No guess taken for this user' : ''"
         matTooltipPosition="below"
         [ngClass]="name === '' ? 'empty-tr' : 'normal-tr'">
@@ -14,7 +14,7 @@
                     </span>
                 </div>
                 @if (correctUsernames) {
-                    <mat-icon *ngIf="correctUsernames.includes(name); else incorrect" id="correct-icon">check</mat-icon>
+                    <mat-icon *ngIf="name === correctUsernames[i]; else incorrect" id="correct-icon">check</mat-icon>
                     <ng-template #incorrect><mat-icon id="incorrect-icon">close</mat-icon></ng-template>
                 }
             </td>
