--- a/src/app/components/login-page/login-page.component.html
+++ b/src/app/components/login-page/login-page.component.html
@@ -1,11 +1,24 @@
-<div style="background-image: url('/basicBackground.png'); background-attachment: fixed; box-shadow: inset 0 0 50px 8px #282a2d; background-repeat: no-repeat; background-position: center;">
+<!-- <div style="background-image: url('/basicBackground.png'); background-attachment: fixed; box-shadow: inset 0 0 50px 8px #282a2d; background-repeat: no-repeat; background-position: center;">
 
 <div class="mainContainer">
     <mat-card class="loginCard">
         <mat-card-title style="margin-bottom: 20px;">Welcome to Anonymous Chats!</mat-card-title>
         <mat-card-content class="loginContent">
-            <button mat-flat-button (click)="logIn()">Log In</button>
+            <button mat-stroked-button (click)="logIn()">Get Started</button>
         </mat-card-content>
     </mat-card>
 </div>
-</div> 
+</div>  -->
+
+
+<div class="container">
+    <h1 id="app-name">WhoDis?</h1>
+    <p id="subtext" class="subheader">How well do you know your circle?</p>
+    <p id="subtext"> 
+        Test your friendships in the ultimate guessing game. 
+        WhoDis divides, disguises, and challenges you to uncover who's really who.
+    </p>
+    <button id="get-started-button" mat-stroked-button (click)="logIn()">
+        Get Started
+    </button>
+</div>
