Slight tweaks and a bug fix

--- a/src/app/components/login-page/login-page.component.html
+++ b/src/app/components/login-page/login-page.component.html
@@ -16,7 +16,7 @@
     <p id="subtext" class="subheader">How well do you know your circle?</p>
     <p id="subtext"> 
         Test your friendships in the ultimate guessing game. 
-        WhoDis divides, disguises, and challenges you to uncover who's really who.
+        WhoDis divides, disguises, and challenges you to uncover who's really who
     </p>
     <button id="get-started-button" mat-stroked-button (click)="logIn()">
         Get Started
