--- a/src/app/components/Chat/user-select/user-select.component.css
+++ b/src/app/components/Chat/user-select/user-select.component.css
@@ -1,108 +1,165 @@
-#selectedUser {
-    min-height: 50px;
-    background: orange;
-  }
+/* * {
+  border: 1px solid red;
+} */
 
-  .main-container {
-    max-width: 100%;
-    height: 100%; 
-    background-color: var(--primary-color);
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 20px 20px;
-    overflow: hidden;
-    
-  }
+.main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 
-  .drag-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    padding: 20px 20px;
-    overflow: hidden;
+  background-color: var(--primary-color);
+  width: 100%;
+  height: 100%; 
+  padding: 20px;
+  overflow-x: visible;
+}
 
-  }
-  
-  .user-container {
-    min-width: 45%;
-    max-width: 45%;
-    margin: 0 25px 25px 0;
-    display: flex;
-    flex-direction: column;
-    vertical-align: top;
-    background: var(--secondary-color);
-    border-radius: 5px;
-  }
+section {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin: 20px 0;
+  width: 100%;
+}
 
-  .guess-container {
-    margin: 0 25px 25px 0;
-    display: flex;
-    flex-direction: column;
-    vertical-align: top;
-    background: var(--secondary-color);
-    border-radius: 5px;
-  }
-  
-  .list {
-    border: solid 1px #ccc;
-    min-height: 60px;
-    background: var(--secondary-color);
-    border-radius: 4px;
-    display: flex;
-    flex-direction: column;
-    max-width: 100%;
-  }
-  
-  .user-box {
-    padding: 20px 10px;
-    border-bottom: solid 1px #ccc;
-    color: rgba(0, 0, 0, 0.87);
-    display: flex;
-    width: 100%;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    box-sizing: border-box;
-    cursor: move;
-    background: rgb(177, 177, 177);
-    font-size: 14px;
-  }
+.guess-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  flex-grow: 1;
+  gap: 50px;
+  width: 100%;
+  height: 100px;
+}
 
-  .box-title {
-    font-size: 14px;
-    font-family: "Open Sans", serif;
-    font-weight: 400;
-    color: var(--secondary-text-color);
-    margin-bottom: 25px;
-  }
+#chat-member-card {
+  display: flex;
+  flex-flow: column wrap;
+  width: 100px;
+}
+
+#group-member-card {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+  border: 0.5px solid whitesmoke;
+  border-radius: 10px;
+  min-width: 130px;
+  width: fit-content;
+  height: 70px;
+  padding: 0 10px;
+  background-color: var(--ternary-color);
+  pointer-events: auto;
+  cursor: pointer;
+  transition: ease-out all 0.3s;
+}
+
+#group-member-card:hover {
+  border-radius: 30px;
+  transition: ease all 0.5s;
+}
+
+#group-member-card:hover .member-name {
+  color: goldenrod;
+  transition: ease all 0.5s;
+}
+
+.member-name {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 5px;
+
+  font-size: 0.95rem;
+  font-family: "Inter", serif;
+  font-weight: 400;
+  color: white;
+}
+
   
-  .cdk-drag-preview {
-    box-sizing: border-box;
-    border-radius: 4px;
-    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-      0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
-  }
-  
-  .cdk-drag-placeholder {
-    opacity: 0;
-  }
-  
-  
-  #selectedUser.cdk-drop-list-dragging .cdk-drag:not(.cdk-drag-placeholder) {
-    display: none;
-  }
-  
-  .cdk-drag-animating {
-    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-  }
-  
-  .example-box:last-child {
-    border: none;
-  }
-  
-  .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
-    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-  }
-  
+.user-container {
+  min-width: 45%;
+  max-width: 45%;
+  margin: 0 25px 25px 0;
+  display: flex;
+  flex-direction: row;
+  vertical-align: top;
+  background: var(--secondary-color);
+  border-radius: 5px;
+}
+
+.list-header {
+  font-size: 1.2rem;
+  font-family: "Open Sans", serif;
+  font-weight: 500;
+  color: white;
+}
+
+.list {
+  display: flex;
+  flex-direction: row;
+  flex-grow: 1;
+  gap: 10px;
+  height: 100%;
+  width: 100%;
+}
+
+.user-box {
+  padding: 20px 10px;
+  border-bottom: solid 1px #ccc;
+  color: rgba(0, 0, 0, 0.87);
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  cursor: move;
+  background: rgb(177, 177, 177);
+  font-size: 14px;
+}
+
+.clear-guess-button {
+  display: flex;
+  flex-flow: row nowrap;
+  font-size: 0.8rem;
+  font-family: "Inter", serif;
+  font-weight: 400;
+  color: lightslategray;
+  pointer-events: auto;
+  cursor: pointer;
+  margin-left: auto;
+}
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+
+#selectedUser.cdk-drop-list-dragging .cdk-drag:not(.cdk-drag-placeholder) {
+  display: none;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.example-box:last-child {
+  border: none;
+}
+
+.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
